err/multipolynomial-bases.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/multipolynomial_bases'...
Compiling './lib/python3.5/site-packages/multipolynomial_bases/ambient_space_basis.py'...
***   File "./lib/python3.5/site-packages/multipolynomial_bases/ambient_space_basis.py", line 201
    raise NotImplementedError, "The hecke algebra operator is only implemented in type A"%()
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multipolynomial_bases/basis.py'...
***   File "./lib/python3.5/site-packages/multipolynomial_bases/basis.py", line 804
    raise ValueError, "%s is not a valid operation number"%(i)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multipolynomial_bases/linear_basis_on_vectors.py'...
***   File "./lib/python3.5/site-packages/multipolynomial_bases/linear_basis_on_vectors.py", line 159
    raise NotImplementedError,"No compute method has been implemented"%()
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multipolynomial_bases/monomial.py'...
***   File "./lib/python3.5/site-packages/multipolynomial_bases/monomial.py", line 437
    raise ValueError, "Unknown type %s"%(otype)
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/multipolynomial_bases/multivariate_polynomials.py'...
***   File "./lib/python3.5/site-packages/multipolynomial_bases/multivariate_polynomials.py", line 399
    raise TypeError, "do not know how to make '%s' an element of '%s'"%(element, self)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/multipolynomial_bases-1.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
